static/src/stylesheets/module/content/tones/_tone-media.scss
@include tone-content-icons(media, 'white');

@include tone-content(
    media, // $tone
    $media-background, // $tonal__header-background
    $neutral-6, // $tonal__header-text
    $media-default, // $tonal__header-link
    400, // $tonal__headline-weight
    #ffffff, // $tonal__headline-colour
    $media-default, // $tonal__headline-accent
    $media-background, // $tonal__standfirst-background
    $neutral-4, // $tonal__standfirst-text
    #ffffff, // $tonal__standfirst-link
    $media-background, // $tonal__article-background
    $media-default // $tonal__article-link
);

// Podcast and media tones share page styling
.tonal--tone-media {
    color: $neutral-4;
    padding-top: 0;

    .byline,
    .byline .tone-colour,
    .byline .tone-colour:hover,
    .content__dateline,
    .meta__numbers .sharecount__heading,
    .meta__numbers .commentcount2__heading {
        color: $neutral-3;
    }

    .meta__numbers .sharecount__value,
    .meta__numbers .commentcount2__value {
        color: $neutral-4;
    }

    .meta__numbers .inline-share,
    .meta__numbers .inline-comment-16 {
        fill: $neutral-3;
    }

    .commentcount2 {
        &:hover,
        &:focus {
            text-decoration: none;

            .commentcount2__heading {
                color: $neutral-4;
            }

            .inline-comment-16 {
                fill: $neutral-4;
            }

            .commentcount2__value {
                color: $neutral-6;
            }
        }
    }

    .brandbadge__header,
    .brandbadge__help,
    .ad-slot--paid-for-badge__header,
    .ad-slot--paid-for-badge__help {
        color: $neutral-6;
    }

    .caption {
        color: $neutral-4;

        a {
            color: $neutral-4;
            border-bottom: 1px solid $neutral-2;
            transition: border-color .15s ease-out;

            &:hover {
                border-bottom: 1px solid $neutral-7;
                text-decoration: none;
            }
        }
    }

    .byline,
    .content__dateline,
    .content__meta-container,
    .ad-slot--paid-for-badge--article,
    .submeta hr,
    .commentcount,
    .meta__numbers,
    .meta__social,
    .meta__save-for-later,
    .meta__number:not(u-h) + .meta__number {
        border-color: $media-mute;
    }

    .from-content-api {
        a {
            @extend %u-underline;
        }

        a,
        .u-underline {
            color: inherit;
            border-bottom-color: $neutral-2;

            &:hover,
            &:focus {
                border-color: mix($neutral-2, $neutral-4, 50%);
            }
            &:active {
                color: $media-default;
                border-color: $media-default;
            }
        }
    }

}

